crates/rooch-framework-tests/tests/cases/module/module_exists.exp
processed 3 tasks

task 1 'publish'. lines 3-7:
status EXECUTED

task 2 'run'. lines 8-18:
Error: error[E03009]: unbound variable
   ┌─ /tmp/tempfile:13:28
   │
13 │         let module_store = borrow_module_store();
   │                            ^^^^^^^^^^^^^^^^^^^ Invalid function usage. Unbound variable 'borrow_module_store'


